--- a/FAQ.html
+++ b/FAQ.html
@@ -23,17 +23,15 @@
     <span class="icon-bar"></span>
   </button>
 
-  <a class="navbar-brand" href="WEB-site_1.html">IITCompany</a>
-  <a href="WEB-site_1.html"><img brand alt="Brand" width="40%" height="40%" src="apache.svg" class="img-responsive center"></a>
+  <a class="navbar-brand" href="index.html">IITCompany</a>
+  <a href="index.html"><img brand alt="brand" width="30%" height="30%" src="apache.svg" class="img-responsive center"></a>
   </div>
   <div class=" navbar-collapse collapse" id="navbar-collapse">
     <ul class="nav navbar-nav">
   <li class="dropdown">
     <a href="#" class="dropdown-toggle" data-toggle="dropdown">More info<b class="caret"></b></a>
     <ul class="dropdown-menu">
-      <li><a href="#">Gem1</a></li>
-      <li><a href="#">Gem2</a></li>
-      <li><a href="#">Gem3</a></li>
+
       <li class="divider"></li>
       <li><a href="FAQ.html">FAQ</a></li>
     </ul>
@@ -68,26 +66,27 @@
 
     <div class="panel panel-info">
     <div class="panel-heading">
-      <a data-toggle="collapse" data-parent="#collapse-group" href="#el1">Нельзя играть с другом?</a>
+      <a data-toggle="collapse" data-parent="#collapse-group" href="#el1">Why i can't to play with friend?</a>
     </div>
     <div id="el1" class="collapse">
-      <div class="panel-body">Для того, чтобы открыть режим игры вдвоем необходимо зарегистрироваться в самой игре.</div>
+      <div class="panel-body">You must to registrate, before playing with friend.</div>
       </div>
   </div>
   <div class="panel panel-info">
   <div class="panel-heading">
-    <a data-toggle="collapse" data-parent="#collapse-group" href="#el2">Почему не могу зарегистрироваться на сайте?</a>
+    <a data-toggle="collapse" data-parent="#collapse-group" href="#el2">Why can not I register on the site?</a>
   </div>
   <div id="el2" class="collapse">
-    <div class="panel-body">В данный момент идет доработка синхронизации базы данных между игрой и сайтом.</div>
+    <div class="panel-body">
+At the moment, the database synchronization between the game and the site is being finalized.</div>
     </div>
 </div>
 <div class="panel panel-info">
 <div class="panel-heading">
-  <a data-toggle="collapse" data-parent="#collapse-group" href="#el3">Будут ли обновления?</a>
+  <a data-toggle="collapse" data-parent="#collapse-group" href="#el3">Will you add some new feature?Like play vs BOT</a>
 </div>
 <div id="el3" class="collapse">
-  <div class="panel-body">Будут.</div>
+  <div class="panel-body">Yeah, but also we working on this.</div>
   </div>
 </div>
 
@@ -95,7 +94,7 @@
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.1/jquery.min.js"></script>﻿
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js" integrity="sha384-Tc5IQib027qvyjSMfHjOMaLkfuWVxZxUPnCJA7l2mCWNIpG9mGCD8wGNIcPD7Txa" crossorigin="anonymous"></script>
     <!-- HelloPreload http://hello-site.ru/preloader/ -->
-    <style type="text/css">#hellopreloader>p{display:none;}#hellopreloader_preload{display: block;position: fixed;z-index: 99999;top: 0;left: 0;width: 100%;height: 100%;min-width: 1000px;background: #000000 url(http://hello-site.ru//main/images/preloads/bars.svg) center center no-repeat;background-size:121px;}</style>
+    <style type="text/css">#hellopreloader>p{display:none;}#hellopreloader_preload{display: block;position: fixed;z-index: 99999;top: 0;left: 0;width: 100%;height: 100%;min-width: 1000px;background: #000000 url(http://hello-site.ru//main/images/preloads/puff.svg) center center no-repeat;background-size:121px;}</style>
     <div id="hellopreloader"><div id="hellopreloader_preload"></div><p><a href="http://hello-site.ru">Hello-Site.ru. Бесплатный конструктор сайтов.</a></p></div>
     <script type="text/javascript">var hellopreloader = document.getElementById("hellopreloader_preload");function fadeOutnojquery(el){el.style.opacity = 1;var interhellopreloader = setInterval(function(){el.style.opacity = el.style.opacity - 0.05;if (el.style.opacity <=0.05){ clearInterval(interhellopreloader);hellopreloader.style.display = "none";}},16);}window.onload = function(){setTimeout(function(){fadeOutnojquery(hellopreloader);},1000);};</script>
     <!-- HelloPreload http://hello-site.ru/preloader/ -->
