--- a/index.html
+++ b/index.html
@@ -20,17 +20,15 @@
     <span class="icon-bar"></span>
   </button>
 
-  <a class="navbar-brand" href="WEB-site_1.html">IITCompany</a>
-  <a href="WEB-site_1.html"><img alt="Brand" width="20%" height="20%" src="github-octocat.svg" class="img-responsive"></a>
+  <a class="navbar-brand" href="index.html">IITCompany</a>
+  <a href="index.html"><img alt="Brand" width="30%" height="30%" src="apache.svg" class="img-responsive"></a>
   </div>
   <div class=" navbar-collapse collapse" id="navbar-collapse">
     <ul class="nav navbar-nav">
   <li class="dropdown">
     <a href="#" class="dropdown-toggle" data-toggle="dropdown">More info<b class="caret"></b></a>
     <ul class="dropdown-menu">
-      <li id="li1"><a href="#">Gem1</a></li>
-      <li><a href="#">Gem2</a></li>
-      <li><a href="#">Gem3</a></li>
+    
       <li class="divider"></li>
       <li><a href="FAQ.html">FAQ</a></li>
     </ul>
@@ -71,18 +69,20 @@
    <div class="col-md-4">
 
      <h2>First step</h2>
-<p asd>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+<p >First step to play in our game vs frien. You should to
+click on the tab "Registrate" and if you already added new user, you just
+confirm your details.</p>
 <p><a class="btn btn-primary btn-md" href="#">Know more &raquo;</a></p>
    </div>
 
    <div class="col-md-4">
      <h2>Second step</h2>
-<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+<p>If you have no account, you should to: <br> Registrate -> Add new user.</p>
 <p><a class="btn btn-primary btn-md" href="#">Know more &raquo;</a></p>
    </div>
   <div class="col-md-4">
     <h2>Third step</h2>
-<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+<p>After it you should to confirm yuor new account: <br>click on the tap Registrate and write your information </p>
 <p><a class="btn btn-primary btn-md" href="#">Know more &raquo;</a></p>
   </div>
    </div>
